# STM32_SmartLED_AI

./: README.md
Projects/STM32F4-Discovery/Applications/FreeRTOS_LED_Effects/: CMakeLists.txt  build.bat  build.sh  readme.txt
Projects/STM32F4-Discovery/Applications/FreeRTOS_LED_Effects/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Projects/STM32F4-Discovery/Applications/FreeRTOS_LED_Effects/STM32CubeIDE/: .cproject  .project
Projects/STM32F4-Discovery/Applications/FreeRTOS_LED_Effects/Src/: main.c  stm32f4xx_it.c
Projects/STM32F4-Discovery/Applications/FreeRTOS_LED_Effects/cmake/: arm-none-eabi.cmake
